my first commit

--- a/smartphone.html
+++ b/smartphone.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Как войти в личный кабинет cbilling с телефона.">
+    <meta name="description" content="Не работает сайт cbilling? Нет доступа в кабинет сибиллинг? Обойдите блокировку cbilling со смартфона.">
+    <link rel="icon" href="img/logo.webp">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
