--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name='viewport' content="width=device-width," initial-scale='1.0'>
+    <meta name="title" content="Как войти в личный кабинет Cbilling tv? Зеркало и другие способы здесь.">
+    <meta name="description" content="Не работает Cbilling eu? Нет доступа в личный кабинет цбиллинг? Воспользуйтесь одним из способов обхода для доступа.">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/logo.webp">
     <title>Document</title>
 </head>
 
