--- a/pc.html
+++ b/pc.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name='viewport' content="width=device-width," initial-scale='1.0'>
     <link rel="stylesheet" href="style.css">
+    <meta name="title" content="Как войти в личный кабинет сибиллинг? С Windows и MAC пк.">
+    <meta name="description" content="Не работает сибиллинг? Нет доступа в личный кабинет cbilling? Обойдите блокировку одним из способов.">
+    <link rel="icon" href="img/logo.webp">
     <title>Document</title>
 </head>
 
