--- a/browser.html
+++ b/browser.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body> 
     <div class="burger__menu">
         <div class="burger__container">
             <div class="header__logo">
@@ -321,7 +321,15 @@
 
 
 
-
+    <section id="mirrorWithEmail">
+        <div class="container">
+            <h2>Получите зеркало по E-mail</h2>
+            <div>
+                Отправьте письмо любого содержания на почту mirror@mail.cbilling.info, и мы вышлем в ответном письме ссылку на незаблокированный домен нашего сайта.  
+                Пройдите по полученной ссылке, введите логин и пароль - и вы попадете в личный кабинет, где сможете продлить свою подписку или обратиться в техподдержку. 
+            </div>
+        </div>
+    </section>
 
     <section class="safety safety2">
         <div class="container">
