--- a/pc.html
+++ b/pc.html
@@ -189,7 +189,15 @@
     <div class="container">
 
     </div>
-
+    <section id="mirrorWithEmail">
+        <div class="container">
+            <h2>Получите зеркало по E-mail</h2>
+            <div>
+                Отправьте письмо любого содержания на почту mirror@mail.cbilling.info, и мы вышлем в ответном письме ссылку на незаблокированный домен нашего сайта.  
+Пройдите по полученной ссылке, введите логин и пароль - и вы попадете в личный кабинет, где сможете продлить свою подписку или обратиться в техподдержку. 
+            </div>
+        </div>
+    </section>
 
     <footer class="footer">
         <div class="container">
