--- a/index.html
+++ b/index.html
@@ -146,7 +146,15 @@
         </div>
 
     </section>
-
+    <section id="mirrorWithEmail">
+        <div class="container">
+            <h2>Получите зеркало по E-mail</h2>
+            <div>
+                Отправьте письмо любого содержания на почту mirror@mail.cbilling.info, и мы вышлем в ответном письме ссылку на незаблокированный домен нашего сайта.  
+Пройдите по полученной ссылке, введите логин и пароль - и вы попадете в личный кабинет, где сможете продлить свою подписку или обратиться в техподдержку. 
+            </div>
+        </div>
+    </section>
 
     <section id="HowToGetAccess">
         <div class="container">
