--- a/smartphone.html
+++ b/smartphone.html
@@ -393,7 +393,15 @@
     </header>
 
 
-
+    <section id="mirrorWithEmail">
+        <div class="container">
+            <h2>Получите зеркало по E-mail</h2>
+            <div>
+                Отправьте письмо любого содержания на почту <a href="email:mirror@mail.cbilling.info">mirror@mail.cbilling.info</a> , и мы вышлем в ответном письме ссылку на незаблокированный домен нашего сайта.  
+Пройдите по полученной ссылке, введите логин и пароль - и вы попадете в личный кабинет, где сможете продлить свою подписку или обратиться в техподдержку. 
+            </div>
+        </div>
+    </section>
 
 
   
