--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <p class="header__content-info">Сервис онлайн-телевидения Cbilling заблокирован в РФ, воспользуйтесь
                         одним из методов обхода блокировки для доступа в личный кабинет</p>
                     <p class="header__content-italic">Это легко и безопасно</p>
-                    <button class="header__button">Обойти блокировку</button>
+                    <button class="header__button"><a style="color: white;" href="#mirrorWithEmail"> Обойти блокировку</a></button>
                 </div>
                 <div class="header__content-img">
                     <img src="img/content-header.webp" alt="">
@@ -151,7 +151,7 @@
     </section>
     <section id="mirrorWithEmail">
         <div class="container">
-            <h2>Получите зеркало по E-mail</h2>
+            <h2>Получите зеркало по E-mail <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 256 256"><path fill="#0a3bff" d="m246.15 65.46l-.07-.08l-23.93-23.53a20 20 0 0 0-28.23-.05l-90 88.83l-33.86-32.85a20 20 0 0 0-28.21.08l-24 24a20 20 0 0 0 0 28.26l71.62 72a20 20 0 0 0 28.29 0L246.15 93.74a20 20 0 0 0 0-28.28M103.61 202.33L37.64 136L56 117.61L95.65 156a12 12 0 0 0 16.78-.08L208 61.61l18.32 18Z"/></svg></h2>
             <div>
                 Отправьте письмо любого содержания на почту <a href="email:mirror@mail.cbilling.info">mirror@mail.cbilling.info</a> , и мы вышлем в ответном письме ссылку на незаблокированный домен нашего сайта.  
 Пройдите по полученной ссылке, введите логин и пароль - и вы попадете в личный кабинет, где сможете продлить свою подписку или обратиться в техподдержку. 
@@ -419,7 +419,7 @@
                 </div>
             </div>
 
-            <button>Войти в Cbilling</button>
+            <button><a style="color: inherit;" href="#mirrorWithEmail"> Войти в Cbilling</a></button>
         </div>
 
 
