--- a/index.html
+++ b/index.html
@@ -153,8 +153,10 @@
         <div class="container">
             <h2>Получите зеркало по E-mail <img width="48px" height="48px" src="./img/verificate.png" alt=""></h2>
             <div>
-                Отправьте письмо любого содержания на почту <a href="email:mirror@mail.cbilling.info">mirror@mail.cbilling.info</a> , и мы вышлем в ответном письме ссылку на незаблокированный домен нашего сайта.  
-Пройдите по полученной ссылке, введите логин и пароль - и вы попадете в личный кабинет, где сможете продлить свою подписку или обратиться в техподдержку. 
+                Самый простой способ доступа. Отправьте письмо любого содержания на почту <a href="email:mirror@mail.cbilling.info">mirror@mail.cbilling.info</a> , и мы вышлем вам ссылку на рабочее зеркало нашего сайта. 
+                <br>
+                <br>
+                Пройдите по полученной ссылке, введите логин и пароль - и вы попадете в личный кабинет, где сможете продлить свою подписку или обратиться в техподдержку.
             </div>
         </div>
     </section>
