--- a/pc.html
+++ b/pc.html
@@ -44,8 +44,25 @@
                 </ul>
             </div>
 
+        </div>
 
-            <h1> Доступ к Cbilling из компьютера</h1>
+    </header>
+    <div class="container">
+    </div>
+    <section style="margin: 0 0 50px;" id="mirrorWithEmail">
+        <div class="container">
+            <h2>Получите зеркало по E-mail <img width="48px" height="48px" src="./img/verificate.png" alt=""></h2>
+            <div>
+                Самый простой способ доступа. Отправьте письмо любого содержания на почту <a href="email:mirror@mail.cbilling.info">mirror@mail.cbilling.info</a> , и мы вышлем вам ссылку на рабочее зеркало нашего сайта. 
+                <br>
+                <br>
+                Пройдите по полученной ссылке, введите логин и пароль - и вы попадете в личный кабинет, где сможете продлить свою подписку или обратиться в техподдержку.
+            </div>
+        </div>
+    </section>
+    <div class="container">
+        <h1 > Доступ к Cbilling для компьютера</h1>
+
             <div class="howToGetAccessPC">
 
                 <div class="howToGetAccess_photosBlock">
@@ -185,23 +202,72 @@
                     <img width="535px" src="./img/pc/006.webp" alt="">
                 </div>
             </div>
-        </div>
+        </div>   
+      
 
-    </header>
-
-    <div class="container">
-
-    </div>
-    <section style="margin: 50px 0;" id="mirrorWithEmail">
+  
+    <section id="whyWeAreBlocked">
         <div class="container">
-            <h2>Получите зеркало по E-mail <img width="48px" height="48px" src="./img/verificate.png" alt=""></h2>
-            <div>
-                Отправьте письмо любого содержания на почту <a href="email:mirror@mail.cbilling.info">mirror@mail.cbilling.info</a> , и мы вышлем в ответном письме ссылку на незаблокированный домен нашего сайта.  
-Пройдите по полученной ссылке, введите логин и пароль - и вы попадете в личный кабинет, где сможете продлить свою подписку или обратиться в техподдержку. 
+            <h2>Почему Cbilling блокируют?</h2>
+
+
+            <div class="whyWeAreBlocked__main">
+                <div class="whyWeAreBlocked__el">
+                    <div class="whyWeAreBlocked__el_svg">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="66" height="65" viewBox="0 0 66 65" fill="none">
+                            <path d="M0 0V64.5L66 0H0Z" fill="#F6F6F6" />
+                        </svg>
+                        <p>01</p>
+                    </div>
+
+                    <div class="whyWeAreBlocked_centerIcon">
+                        <img src="./img/icon1.webp" alt="">
+                    </div>
+
+                    <p> Нет цензуры и ограничений</p>
+                    <div class="whyWeAre__line"></div>
+                    <span>У нас доступны каналы разных стран без ограничений. Это не нравится некоторым
+                        правительствам.</span>
+                </div>
+
+                <div class="whyWeAreBlocked__el">
+                    <div class="whyWeAreBlocked__el_svg">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="66" height="65" viewBox="0 0 66 65" fill="none">
+                            <path d="M0 0V64.5L66 0H0Z" fill="#F6F6F6" />
+                        </svg>
+                        <p>02</p>
+
+                    </div>
+
+                    <div class="whyWeAreBlocked_centerIcon">
+                        <img src="./img/icon2.webp" alt="">
+                    </div>
+                    <p> Доступные цены</p>
+                    <div class="whyWeAre__line"></div>
+                    <span>Мы предлагаем больше каналов, чем государственные конкуренты, за меньшие деньги.</span>
+                </div>
+
+                <div class="whyWeAreBlocked__el">
+                    <div class="whyWeAreBlocked__el_svg">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="66" height="65" viewBox="0 0 66 65" fill="none">
+                            <path d="M0 0V64.5L66 0H0Z" fill="#F6F6F6" />
+                        </svg>
+                        <p>03</p>
+                    </div>
+
+                    <div class="whyWeAreBlocked_centerIcon">
+                        <img src="./img/icon3.webp" alt="">
+                    </div>
+
+                    <p>Доверие пользователей</p>
+                    <div class="whyWeAre__line"></div>
+                    <span>Мы работаем с 2006 года. Нам доверяют тысячи пользователей, выбравших качество по разумной
+                        цене.</span>
+                </div>
             </div>
         </div>
-    </section>
 
+    </section>
     <footer class="footer">
         <div class="container">
             <div class="footer__container">
