--- a/smartphone.html
+++ b/smartphone.html
@@ -43,13 +43,30 @@
                     <li class="header__list-item"><a href="smartphone.html">Для смартфона</a></li>
                 </ul>
             </div>
+        </div>
+    </header>
+<section style="margin: 0 0 50px;" id="mirrorWithEmail">
+    <div class="container">
+        <h2>Получите зеркало по E-mail <img width="48px" height="48px" src="./img/verificate.png" alt=""></h2>
+        <div>
+            Самый простой способ доступа. Отправьте письмо любого содержания на почту <a href="email:mirror@mail.cbilling.info">mirror@mail.cbilling.info</a> , и мы вышлем вам ссылку на рабочее зеркало нашего сайта. 
+            <br>
+            <br>
+            Пройдите по полученной ссылке, введите логин и пароль - и вы попадете в личный кабинет, где сможете продлить свою подписку или обратиться в техподдержку.
+        </div>
+    </div>
+</section>
+    <div class="container">
 
-            <h1> Доступ к Cbilling из смартфона</h1>
+            <h1> Доступ к Cbilling для смартфона</h1>
 
             <div class="howToGetAccess_names howToGetAccess_names2">
                 <div class="howToGetAccess_name howToGetAccess_name-active">Android</div>
                 <div class="howToGetAccess_name">Iphone</div>
             </div>
+
+
+
             <div class="howToGet__firefox howToGet__firefox-active">
 
 
@@ -385,24 +402,77 @@
                     </div>
 
                     <img width="535px" src="./img/iphone/008.webp" alt="">
-
                 </div>
             </div>
-
         </div>
-    </header>
 
 
-    <section  style="margin: 50px 0;" id="mirrorWithEmail">
+    </div>
+
+
+    
+    <section id="whyWeAreBlocked">
         <div class="container">
-            <h2>Получите зеркало по E-mail <img width="48px" height="48px" src="./img/verificate.png" alt=""></h2>
-            <div>
-                Отправьте письмо любого содержания на почту <a href="email:mirror@mail.cbilling.info">mirror@mail.cbilling.info</a> , и мы вышлем в ответном письме ссылку на незаблокированный домен нашего сайта.  
-Пройдите по полученной ссылке, введите логин и пароль - и вы попадете в личный кабинет, где сможете продлить свою подписку или обратиться в техподдержку. 
+            <h2>Почему Cbilling блокируют?</h2>
+
+
+            <div class="whyWeAreBlocked__main">
+                <div class="whyWeAreBlocked__el">
+                    <div class="whyWeAreBlocked__el_svg">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="66" height="65" viewBox="0 0 66 65" fill="none">
+                            <path d="M0 0V64.5L66 0H0Z" fill="#F6F6F6" />
+                        </svg>
+                        <p>01</p>
+                    </div>
+
+                    <div class="whyWeAreBlocked_centerIcon">
+                        <img src="./img/icon1.webp" alt="">
+                    </div>
+
+                    <p> Нет цензуры и ограничений</p>
+                    <div class="whyWeAre__line"></div>
+                    <span>У нас доступны каналы разных стран без ограничений. Это не нравится некоторым
+                        правительствам.</span>
+                </div>
+
+                <div class="whyWeAreBlocked__el">
+                    <div class="whyWeAreBlocked__el_svg">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="66" height="65" viewBox="0 0 66 65" fill="none">
+                            <path d="M0 0V64.5L66 0H0Z" fill="#F6F6F6" />
+                        </svg>
+                        <p>02</p>
+
+                    </div>
+
+                    <div class="whyWeAreBlocked_centerIcon">
+                        <img src="./img/icon2.webp" alt="">
+                    </div>
+                    <p> Доступные цены</p>
+                    <div class="whyWeAre__line"></div>
+                    <span>Мы предлагаем больше каналов, чем государственные конкуренты, за меньшие деньги.</span>
+                </div>
+
+                <div class="whyWeAreBlocked__el">
+                    <div class="whyWeAreBlocked__el_svg">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="66" height="65" viewBox="0 0 66 65" fill="none">
+                            <path d="M0 0V64.5L66 0H0Z" fill="#F6F6F6" />
+                        </svg>
+                        <p>03</p>
+                    </div>
+
+                    <div class="whyWeAreBlocked_centerIcon">
+                        <img src="./img/icon3.webp" alt="">
+                    </div>
+
+                    <p>Доверие пользователей</p>
+                    <div class="whyWeAre__line"></div>
+                    <span>Мы работаем с 2006 года. Нам доверяют тысячи пользователей, выбравших качество по разумной
+                        цене.</span>
+                </div>
             </div>
         </div>
-    </section>
 
+    </section>
 
   
     <footer class="footer">
