--- a/browser.html
+++ b/browser.html
@@ -44,6 +44,7 @@
                 </ul>
             </div>
 
+        <h1 style="margin-top: 60px;"> Доступ к Cbilling для браузера</h1>
             
             </div>
     </header>
@@ -59,7 +60,6 @@
         </div>
     </section>
     <div class="container">
-        <h1> Доступ к Cbilling для браузера</h1>
 
         <div class="howToGetAccess_names howToGetAccess_names2">
             <div class="howToGetAccess_name howToGetAccess_name-active">Браузер FireFox</div>
