--- a/smartphone.html
+++ b/smartphone.html
@@ -43,6 +43,8 @@
                     <li class="header__list-item"><a href="smartphone.html">Для смартфона</a></li>
                 </ul>
             </div>
+            <h1 style="margin-top:  60px;"> Доступ к Cbilling для смартфона</h1>
+
         </div>
     </header>
 <section style="margin: 0 0 50px;" id="mirrorWithEmail">
@@ -58,7 +60,6 @@
 </section>
     <div class="container">
 
-            <h1> Доступ к Cbilling для смартфона</h1>
 
             <div class="howToGetAccess_names howToGetAccess_names2">
                 <div class="howToGetAccess_name howToGetAccess_name-active">Android</div>
