--- a/pc.html
+++ b/pc.html
@@ -43,12 +43,12 @@
                     <li class="header__list-item"><a href="smartphone.html">Для смартфона</a></li>
                 </ul>
             </div>
+            <h1 style="margin-top: 60px;"> Доступ к Cbilling для компьютера</h1>
 
         </div>
 
     </header>
-    <div class="container">
-    </div>
+   
     <section style="margin: 0 0 50px;" id="mirrorWithEmail">
         <div class="container">
             <h2>Получите зеркало по E-mail <img width="48px" height="48px" src="./img/verificate.png" alt=""></h2>
@@ -61,7 +61,6 @@
         </div>
     </section>
     <div class="container">
-        <h1 > Доступ к Cbilling для компьютера</h1>
 
             <div class="howToGetAccessPC">
 
